--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -992,11 +992,11 @@ textarea.form-control {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #eee;
+  background: #b1b1b1;
 }
 .sidebar:hover {
   ::-webkit-scrollbar-thumb {
-    background: #eee;
+    background: #b1b1b1;
   }
 }
 .sidebar.opened {
@@ -11783,7 +11783,7 @@ body[data-layout-mode="dark"] .alertify .ajs-header {
   .slide-nav .sidebar {
     margin-left: 0;
   }
-.mobile_btn {
+  .mobile_btn {
     color: #fff;
     font-size: 24px;
     height: 70px;
