--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -996,11 +996,11 @@ textarea.form-control {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #b1b1b1;
+  background: #2e37a4;
 }
 .sidebar:hover {
   ::-webkit-scrollbar-thumb {
-    background: #b1b1b1;
+    background: #2e37a4;
   }
 }
 .sidebar.opened {
