--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -310,8 +310,8 @@ table.table td h2 span {
   margin-bottom: 20px;
 }
 .cal-icon:after {
-  background: transparent url("../images/dashborad/icons/calendar-icon.svg") no-repeat scroll
-    0 0;
+  background: transparent url("../images/dashborad/icons/calendar-icon.svg")
+    no-repeat scroll 0 0;
   bottom: 0;
   content: "";
   display: block;
@@ -328,7 +328,8 @@ table.table td h2 span {
   width: 100%;
 }
 .time-icon:after {
-  background: transparent url("../images/dashborad/clock.png") no-repeat scroll 0 0;
+  background: transparent url("../images/dashborad/clock.png") no-repeat scroll
+    0 0;
   bottom: 0;
   content: "";
   display: block;
@@ -1525,6 +1526,8 @@ textarea.form-control {
   border-radius: 12px;
   font-size: 16px;
   padding: 10px 15px;
+  position: relative;
+  height: 46px;
 }
 .login-right .btn-primary:hover {
   background: linear-gradient(92.39deg, #2e37a4 1.86%, #00318b 100%);
@@ -1566,7 +1569,28 @@ textarea.form-control {
   font-weight: 500;
   margin-bottom: 0px;
 }
-
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
+}
+.spinnerMiniStyle {
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #00d3c7;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+  position: absolute;
+  top: 15%;
+  right: 45%;
+}
 /*-----------------
 	14. Login
 -----------------------*/
