--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12835,3 +12835,14 @@ body[data-layout-mode="dark"] .alertify .ajs-header {
   width: 100%;
   height: 50vh;
 }
+
+.google-maps-link {
+  font-size: 12px;
+  position: absolute;
+  z-index: 500;
+  padding: 5px 14px 5px 14px;
+  background-color: #fff;
+  border-radius: 12px;
+  right: 3%;
+  top: 6%;
+}
