--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6774,6 +6774,7 @@ a.status-grey {
   -ms-flex-align: center;
   align-items: center;
   padding-left: 30px;
+  margin: 3%;
 }
 .profile-user-img {
   margin-right: 20px;
