--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12829,6 +12829,11 @@ body[data-layout-mode="dark"] .alertify .ajs-header {
   width: 100%;
   height: 50vh;
 }
+.error-message {
+  font-size: 12px;
+  color: red;
+  padding: 10px;
+}
 
 .google-maps-link {
   font-size: 12px;
