--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -741,7 +741,7 @@ textarea.form-control {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 1039;
+  z-index: 999;
   height: 70px;
   background: #ffffff;
   box-shadow: 0px 0px 14px rgba(204, 204, 204, 0.25);
@@ -961,7 +961,7 @@ textarea.form-control {
 .sidebar {
   top: 90px;
   width: 250px;
-  z-index: 1039;
+  z-index: 999;
   background-color: #fff;
   bottom: 0;
   margin-top: 0px;
@@ -12892,4 +12892,27 @@ body[data-layout-mode="dark"] .alertify .ajs-header {
 .chat-active h5,
 .chat-active p {
   color: #fff !important;
+}
+
+.styled-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  border-radius: 9px;
+  box-shadow: 0 2.4rem 3.2rem rgba(0, 0, 0, 0.12);
+  padding: 3.2rem 2rem;
+  transition: all 0.5s;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--backdrop-color);
+  backdrop-filter: blur(4px);
+  z-index: 1000;
+  transition: all 0.5s;
 }
