--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1662,6 +1662,8 @@ textarea.form-control {
   height: 100vh;
   padding: 0px;
   border-radius: 0px 65px 65px 0px;
+  z-index: 100;
+  transition: all 0.5s ease;
 }
 .login-wrap-bg {
   position: absolute;
